<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        tools:context=".articles.CommentFragment">

    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                tools:ignore="UselessParent">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="110dp"
                    android:orientation="vertical">

                <TextView
                        android:id="@+id/textView5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/ta3li9at"
                        android:textAlignment="center"
                        android:textColor="#000000"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                <View
                        android:id="@+id/view2"
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="#DADADA" />

                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/editCommentLayout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/ecritcommentaire"
                        android:layout_marginTop="10dp"
                        app:boxCornerRadiusBottomEnd="20dp"
                        app:boxCornerRadiusBottomStart="20dp"
                        app:boxCornerRadiusTopEnd="20dp"
                        app:boxCornerRadiusTopStart="20dp"
                        app:endIconContentDescription="@string/ta3li9"
                        app:startIconDrawable="@drawable/ic_vector">

                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editComment"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="#F2F2F2" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/commentRecycler"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#f2f2f2"
                    android:scrollbars="vertical"
                    app:fastScrollEnabled="true"
                    app:fastScrollHorizontalThumbDrawable="@drawable/thumb_drawable"
                    app:fastScrollHorizontalTrackDrawable="@drawable/line_drawable"
                    app:fastScrollVerticalThumbDrawable="@drawable/thumb_drawable"
                    app:fastScrollVerticalTrackDrawable="@drawable/line_drawable" />

        </LinearLayout>
    </FrameLayout>
</androidx.drawerlayout.widget.DrawerLayout>


