<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:id="@+id/content"
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/header"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:ellipsize="end"
                android:textColor="@color/yellow"
                android:textSize="24sp"
                android:text="البويرة"
                android:maxLines="3"
                android:textAlignment="center"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="15dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:textAllCaps="false"/>
            <View
                android:layout_height="2dp"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:background="@color/yellow"
                android:layout_marginBottom="10dp"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="3"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">
                <TextView
                        android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="0"
                    android:textSize="18sp"
                    android:gravity="end"
                    android:textStyle="normal"
                    android:textColor="@color/yellow"
                    android:layout_weight="2"/>

                <TextView
                        android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/active"
                    android:paddingEnd="8dp"
                    android:textAlignment="textStart"
                    android:textSize="18sp"
                    android:layout_weight="1"
                    android:textColor="#000000"
                    android:paddingStart="8dp"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="3"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">
                <TextView
                    android:id="@+id/nbrconfirme"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="0"
                    android:textSize="18sp"
                    android:gravity="end"
                    android:textStyle="normal"
                    android:textColor="@color/yellow"
                    android:layout_weight="2"/>

                <TextView
                        android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/confirmed"
                    android:paddingEnd="8dp"
                    android:textAlignment="textStart"
                    android:textSize="18sp"
                    android:layout_weight="1"
                    android:textColor="#000000"
                    android:paddingStart="8dp"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="3"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">
                <TextView
                    android:id="@+id/nbrmorts"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="0"
                    android:textSize="18sp"
                    android:gravity="end"
                    android:textStyle="normal"
                    android:textColor="@color/yellow"
                    android:layout_weight="2"/>

                <TextView
                        android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/dead"
                    android:paddingEnd="8dp"
                    android:textAlignment="textStart"
                    android:textSize="18sp"
                    android:layout_weight="1"
                    android:textColor="#000000"
                    android:paddingStart="8dp"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="3"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">
                <TextView
                    android:id="@+id/nbrgueris"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="0"
                    android:textSize="18sp"
                    android:gravity="end"
                    android:textStyle="normal"
                    android:textColor="@color/yellow"
                    android:layout_weight="2"/>

                <TextView
                        android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/recovered"
                    android:paddingEnd="8dp"
                    android:textAlignment="textStart"
                    android:textSize="18sp"
                    android:layout_weight="1"
                    android:textColor="#000000"
                    android:paddingStart="8dp"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="3"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">
                <TextView
                        android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="0"
                    android:textSize="18sp"
                    android:gravity="end"
                    android:textColor="@color/yellow"
                    android:layout_weight="2"/>

                <TextView
                        android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/underTest"
                    android:paddingEnd="8dp"
                    android:textAlignment="textStart"
                    android:textSize="18sp"
                    android:layout_weight="1"
                    android:textColor="#000000"
                    android:paddingStart="8dp"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="3"
                android:orientation="horizontal"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    >

                    <Spinner
                        android:id="@+id/centreSpinner"
                        android:layout_width="10dp"
                        android:layout_height="15dp"
                        android:background="@drawable/ic_drop_down_arrow"
                        android:spinnerMode="dropdown"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.99"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.555" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                        android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/marakiz_istikbal"
                    android:paddingEnd="8dp"
                    android:textAlignment="textStart"
                    android:textSize="18sp"
                    android:layout_weight="1"
                    android:textColor="#000000"
                    android:paddingStart="8dp"
                    style="?android:attr/spinnerItemStyle"
                    android:singleLine="true"
                    android:ellipsize="marquee" />




            </LinearLayout>


        </LinearLayout>

    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>