<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="#F2F2F2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:id="@+id/form_signal_layout"
        tools:context=".suspectedCase.FormSignalActivity">

    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="horizontal"

                  android:layout_weight="9"
                    android:background="@color/white"
    >
        <ImageView android:layout_width="wrap_content"
                android:gravity="start"
                   android:clickable="true"
                   style="@style/Widget.AppCompat.Button.Borderless"
                android:src="@drawable/ic_arrow_back_black_24dp"
                android:layout_height="match_parent"
                   android:id="@+id/back_btn"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"/>
        <Button android:layout_width="wrap_content"
                android:text="@string/home"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:textColor="@color/lightViolet"
                android:id="@+id/main_btn"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/back_btn"
                android:layout_marginStart="8dp"
                app:layout_constraintHorizontal_bias="0.977"
                app:layout_constraintVertical_bias="0.0"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
    <View
            android:layout_width="fill_parent"
            android:layout_height="4dip"
            android:background="@drawable/shadow" />
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="vertical"
                  android:layout_weight="1"
                  android:background="@drawable/corners"
                  android:layout_margin="20dp"
    >
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:orientation="horizontal"
                      android:layout_weight="4">
            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="match_parent"
                          android:layout_weight="1"
                          android:orientation="vertical"
            >
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/nomUtilisateur"
                        android:text="@string/user"
                        android:textColor="@color/lightViolet"
                        android:gravity="bottom"
                        android:textDirection="rtl"
                        android:layout_weight="1"

                />
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/date"
                        android:textSize="10dp"
                        android:text="@string/user"
                        android:textColor="@color/lightVioletOpacity"
                        android:gravity="top"
                        android:textDirection="rtl"
                        android:layout_weight="1"

                />
            </LinearLayout>


            <ImageView android:layout_width="30dp"
                       android:layout_height="30dp"
                       android:layout_margin="20dp"
                       android:layout_gravity="center"
                        android:src="@drawable/account"
            />
        </LinearLayout>
        <View
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:background="@color/gold" />
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:layout_weight="3">

            <EditText android:layout_width="match_parent"
                      style="@style/Widget.AppCompat.EditText"
                      android:layout_height="match_parent"
                      android:layout_marginRight="20dp"
                      android:layout_marginLeft="20dp"
                      android:layout_marginTop="30dp"
                      android:layout_marginBottom="30dp"
                      android:background="@drawable/edittext_text_signal"
                      android:padding="14dp"
                      android:textSize="24px"
                      android:hint="@string/comment"
                      android:gravity="start"
                      android:textColor="#A2A2A2"
                      android:textDirection="rtl"

                      android:id="@+id/description_field"/>
        </LinearLayout>
        <ImageView android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:id="@+id/imageView"
                   android:layout_weight="3"
                   android:layout_margin="10dp"
        />
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:gravity="center"
                      android:layout_weight="4">

            <Button android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:text="@string/send"
                    android:textSize="40px"
                    android:textColor="@color/white"
                    android:background="@drawable/send_btn_signal"
                    style="@style/Widget.AppCompat.Button"
                    android:id="@+id/send_btn"

            />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>